ves-middle/tests/t17_fn_struct_dont_declare_local.test
{
    (fn f() => 1)() + (fn f() => 1)() == (fn f() => 2)();
    f(); // undefined
}

%output

error: Undefined variable `f`
  ┌─ <source: #1108d98e81e4956b>:3:5
  │
3 │     f(); // undefined
  │     ^